--- a/list.mustache.html
+++ b/list.mustache.html
@@ -14,5 +14,12 @@
     {{^alarms.length}}
     <p>No alarms set</p>
     {{/alarms.length}}
+
+    <input class="typeahead" />
+    <div id="sltd"></div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js" integrity="sha256-LOnFraxKlOhESwdU/dX+K0GArwymUDups0czPWLEg4E=" crossorigin="anonymous"></script>
+    <script src="./scripts.js"></script>
   </body>
 </html>
