get rid of loading tyour pwn file

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -20,6 +20,56 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js" integrity="sha256-LOnFraxKlOhESwdU/dX+K0GArwymUDups0czPWLEg4E=" crossorigin="anonymous"></script>
-    <script src="scripts.js"></script>
+
+
+
+
+
+
+    
+    <script>
+      var stocksData = [
+        {
+            "company_name": "Facebook",
+            "code": "fb",
+        },
+        {
+            "company_name": "Google",
+            "code": "goog",
+        },
+        {
+            "company_name": "Yahoo",
+            "code": "yhoo",
+        },
+        {
+            "company_name": "Apple",
+            "code": "aapl",
+        },
+        {
+            "company_name": "Royal Mail",
+            "code": "rmg.l",
+        },
+     ];
+    
+    var stocks = new Bloodhound({
+            datumTokenizer: Bloodhound.tokenizers.obj.whitespace('company_name'),
+            queryTokenizer: Bloodhound.tokenizers.whitespace,
+            local: stocksData
+        });
+
+        stocks.initialize();
+
+        $('.typeahead').typeahead(
+            null, {
+            name: 'stocks',
+            displayKey: 'company_name',
+            source: stocks.ttAdapter()
+        }).on('typeahead:selected', function(event, data){            
+            $('.typeahead').val(data.code); 
+            console.log(data);
+            document.getElementById('sltd').innerHTML = data.code;
+        });
+
+    </script>
   </body>
 </html>
