--- a/list.mustache.html
+++ b/list.mustache.html
@@ -19,14 +19,14 @@
     <div id="sltd"></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js" integrity="sha256-LOnFraxKlOhESwdU/dX+K0GArwymUDups0czPWLEg4E=" crossorigin="anonymous"></script>
+    <script src="http://twitter.github.com/typeahead.js/releases/latest/typeahead.bundle.min.js" crossorigin="anonymous"></script>
 
 
 
 
 
 
-    
+
     <script>
       var stocksData = [
         {
