Added styles copied form typeahead docs

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Alarms</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     {{#alarms.length}}
