--- a/list.mustache.html
+++ b/list.mustache.html
@@ -17,9 +17,9 @@
     {{/alarms.length}}
 
     <input class="typeahead" />
-    <input id="datetime" type="datetime-local" name="mytime" placeholder="Select Date time">
-    <input id="msg" type="text" />
-    <button id="trigger"></button>
+    <input id="datetime" class="typeahead" type="datetime-local" name="mytime" placeholder="Select Date time">
+    <input id="msg" class="typeahead" type="text" />
+    <button id="trigger">Send Later</button>
     <div id="sltd" style="display: hidden"></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
