--- a/list.mustache.html
+++ b/list.mustache.html
@@ -17,8 +17,8 @@
     {{/alarms.length}}
 
     <input class="typeahead" />
-    <input id="datetime" class="typeahead" type="datetime-local" name="mytime" placeholder="Select Date time">
-    <input id="msg" class="typeahead" type="text" />
+    <input id="datetime" class="inputBox" type="datetime-local" name="mytime" placeholder="Select Date time">
+    <input id="msg" class="inputBox" type="text" />
     <button id="trigger">Send Later</button>
     <div id="sltd" style="display:hidden"></div>
 
