Added persistence, all mappings to work well; this is a big update

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -8,7 +8,7 @@
     {{#alarms.length}}
     <ul>
       {{#alarms}}
-      <li>{{text}}<br><i>{{timeString}}</i></li>
+      <li>{{msg}}<br><i>{{timeString}}</i><br>{{toid}}</li>
       {{/alarms}}
     </ul>
     {{/alarms.length}}
