--- a/list.mustache.html
+++ b/list.mustache.html
@@ -8,6 +8,7 @@
     {{#alarms.length}}
     <ul>
       {{#alarms}}
+      <div id="fromid">from{{fromid}}</div>
       <li>{{msg}}<br><i>{{timeString}}</i><br>{{toid}}</li>
       {{/alarms}}
     </ul>
@@ -20,6 +21,8 @@
     <input id="datetime" class="inputBox" type="datetime-local" name="mytime" placeholder="Select Date time">
     <input id="msg" class="inputBox" type="text" />
     <button id="trigger">Send Later</button>
+
+    <div id="verdict"></div>
     <div id="sltd" style="display:hidden"></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
