--- a/list.mustache.html
+++ b/list.mustache.html
@@ -15,7 +15,7 @@
     {{/alarms.length}}
     {{^alarms.length}}
     <p>No alarms set</p>
-    <div id="fromid">from {{fromid}}</div>
+    <div id="fromid">{{fromid}}</div>
     {{/alarms.length}}
 
     <input class="typeahead" />
