Now we grab username directly from click event

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -24,6 +24,7 @@
 
     <div id="verdict"></div>
     <div id="sltd" style="display:hidden"></div>
+    <div id="token">{{token}}</div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="typeahead-min.js" crossorigin="anonymous"></script>
