--- a/list.mustache.html
+++ b/list.mustache.html
@@ -15,17 +15,21 @@
     {{^alarms.length}}
     <p style="display:hidden">No alarms set</p>
     {{/alarms.length}}
-    <div id="fromid" style="display:hidden">{{fromid}}</div>
-    <div id="toid" style="display:hidden">{{toid}}</div>
 
     <input class="typeahead" />
     <input id="datetime" class="inputBox" type="datetime-local" name="mytime" placeholder="Select Date time">
     <input id="msg" class="inputBox" type="text" />
     <button id="trigger">Send Later</button>
 
+    <div id="data-holders">
+        <div id="fromid" style="display:hidden">{{fromid}}</div>
+        <div id="toid" style="display:hidden">{{toid}}</div>
+        <div id="sltd" style="display:hidden"></div>
+        <div id="token" style="display:hidden">{{token}}</div>
+    </div>
+
     <div id="verdict"></div>
-    <div id="sltd" style="display:hidden"></div>
-    <div id="token" style="display:hidden">{{token}}</div>
+    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="typeahead-min.js" crossorigin="anonymous"></script>
