we need to get our token somehow, checking now

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -22,7 +22,7 @@
     <button id="trigger">Send Later</button>
 
     <div id="data-holders">
-        <!-- <div id="fromid" style="display:hidden">{{fromid}}</div> -->
+        <div id="fromid" style="display:hidden">{{fromid}}</div>
         <div id="toid" style="display:hidden">{{toid}}</div>
         <div id="sltd" style="display:hidden"></div>
         <div id="token" style="display:hidden">{{token}}</div>
