--- a/list.mustache.html
+++ b/list.mustache.html
@@ -5,17 +5,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    {{#alarms.length}}
-    <ul>
-      {{#alarms}}
-      <li>{{msg}}<br><i>{{timeString}}</i><br>{{toid}}</li>
-      {{/alarms}}
-    </ul>
-    {{/alarms.length}}
-    {{^alarms.length}}
-    <p style="display:hidden">No alarms set</p>
-    {{/alarms.length}}
+    
 
+    <p>Sending Later to <strong>{{chatName}}</strong></p>
     <input class="typeahead" />
     <input id="datetime" class="inputBox" type="datetime-local" name="mytime" placeholder="Select Date time">
     <input id="msg" class="inputBox" type="text" />
