getting rid of typeahead input box

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -8,7 +8,7 @@
     
 
     <p>Sending Later to <strong>{{chatName}}</strong></p>
-    <input class="typeahead" />
+    <!-- <input class="typeahead" /> -->
     <input id="datetime" class="inputBox" type="datetime-local" name="mytime" placeholder="Select Date time">
     <input id="msg" class="inputBox" type="text" />
     <button id="trigger">Send Later</button>
