styliing button now

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -10,8 +10,9 @@
     <p>Sending Later to <strong>{{chatName}}</strong></p>
     <!-- <input class="typeahead" /> -->
     <input id="datetime" class="inputBox" type="datetime-local" name="mytime" placeholder="Select Date time">
-    <input id="msg" class="inputBox" type="text" />
-    <button id="trigger">Send Later</button>
+    <input id="msg" class="inputBox" type="text" placeholder="Your message" />
+    <br><br>
+    <button id="trigger" class="button button1">Send Later</button>
 
     <div id="data-holders">
         <div id="fromid" style="display:hidden">{{fromid}}</div>
