Closing modal when done sending

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -27,6 +27,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="typeahead-min.js" crossorigin="anonymous"></script>
     <script src="scripts.js" crossorigin="anonymous"></script>
+    <script src="https://apps-static.flock.co/js-sdk/1.8.6/flock.js" crossorigin="anonymous"></script>
 
 
   </body>
