Changed color to green

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -7,7 +7,7 @@
   <body>
     
 
-    <p>Sending Later to <strong>{{chatName}}</strong></p>
+    <p style="color: #0abe51">Sending Later to <strong>{{chatName}}</strong></p>
     <!-- <input class="typeahead" /> -->
     <input id="datetime" class="inputBox" type="datetime-local" name="mytime" placeholder="Select Date time">
     <input id="msg" class="inputBox" type="text" placeholder="Your message" />
