--- a/list.mustache.html
+++ b/list.mustache.html
@@ -24,6 +24,8 @@
 
     </div>
 
+    <div id="splmsg" style="display:hidden">{{splmsg}}</div>
+
     <div id="data-holders">
         <div id="fromid" style="display:hidden">{{fromid}}</div>
         <div id="toid" style="display:hidden">{{toid}}</div>
