--- a/list.mustache.html
+++ b/list.mustache.html
@@ -24,7 +24,7 @@
 
     </div>
 
-    <div id="splmsg" style="display:hidden">{{splmsg}}</div>
+    <div id="splmsg">splmsg {{splmsg}}</div>
 
     <div id="data-holders">
         <div id="fromid" style="display:hidden">{{fromid}}</div>
