make my first independent mustache for msgs

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -25,6 +25,9 @@
     </div>
 
     <div id="splmsg">splmsg {{splmsg}}</div>
+    {{#splmsg}}
+    {{msg}}
+    {{/splmsg}}
 
     <div id="data-holders">
         <div id="fromid" style="display:hidden">{{fromid}}</div>
