--- a/list.mustache.html
+++ b/list.mustache.html
@@ -3,6 +3,7 @@
   <head>
     <title>Alarms</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
     
@@ -26,7 +27,12 @@
 
     <div id="splmsg">splmsg {{splmsg}}</div>
     {{#splmsg}}
-    {{msg}}
+    <table>
+        <tr>
+            <th>{{msg}}</th>
+            <th><i class="fa fa-trash-o" aria-hidden="true"></i></th>
+        </tr>
+    </table>
     {{/splmsg}}
 
     <div id="data-holders">
