--- a/list.mustache.html
+++ b/list.mustache.html
@@ -3,7 +3,7 @@
   <head>
     <title>Alarms</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://kit.fontawesome.com/0581d6fa8a.js" crossorigin="anonymous"></script>
   </head>
   <body>
     
@@ -25,12 +25,11 @@
 
     </div>
 
-    <div id="splmsg">splmsg {{splmsg}}</div>
     {{#splmsg}}
     <table>
         <tr>
-            <th>{{msg}}</th>
-            <th><i class="fa fa-trash-o" aria-hidden="true"></i></th>
+            <td>{{msg}}</td>
+            <td><i class="fa fa-trash-o" aria-hidden="true"></i></td>
         </tr>
     </table>
     {{/splmsg}}
