--- a/list.mustache.html
+++ b/list.mustache.html
@@ -26,7 +26,7 @@
     </div>
 
     {{#splmsg}}
-    <table>
+    <table style="width: 100%">
         <tr>
             <td>{{msg}}</td>
             <td><i class="fa fa-trash-o" aria-hidden="true"></i></td>
