trying to align delete buttn

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -28,7 +28,7 @@
     {{#splmsg}}
     <div class="messages-list">
         <div>{{msg}}</div>
-        <div><i class="fa fa-trash-o" aria-hidden="true"></i></div>
+        <div style="text-align: right"><i class="fa fa-trash-o" aria-hidden="true"></i></div>
     </div>
     <!-- <table style="width: 100%">
         <tr>
