reomved unnecessary typeahead script and styled delete btn

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -27,8 +27,7 @@
 
     {{#splmsg}}
     <div class="messages-list">
-        <div>{{msg}}</div>
-        <div style="text-align: right"><i class="fa fa-trash-o" aria-hidden="true"></i></div>
+        <div><i class="fa fa-trash-o" aria-hidden="true"></i>  {{msg}}</div>
     </div>
     <!-- <table style="width: 100%">
         <tr>
@@ -50,7 +49,6 @@
     
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="typeahead-min.js" crossorigin="anonymous"></script>
     <script src="scripts.js" crossorigin="anonymous"></script>
     <script src="https://apps-static.flock.co/js-sdk/1.8.6/flock.js" crossorigin="anonymous"></script>
 
