removed old codes

--- a/list.mustache.html
+++ b/list.mustache.html
@@ -27,7 +27,7 @@
 
     {{#splmsg}}
     <div class="messages-list">
-        <div><i class="fa fa-trash-o" aria-hidden="true"></i>  {{msg}}</div>
+        <div><i class="fa fa-trash-o hover-pointer" aria-hidden="true"></i>  {{msg}}</div>
     </div>
     <!-- <table style="width: 100%">
         <tr>
